# AnkiPomodoroTimerBreathingExercise

./: .gitignore  README_zh.md  __init__.py  breathing.py  change.py  check_duplicates.py  config.json  config.py  constants.py  hooks.py  meta.json  music_player.py  pomodoro.py  pyproject.toml  readme.md  replace.py  requirements.txt  rest_dialog.py  ruff.toml  storage.py  timer_utils.py
.github/workflow/: build.yml
.github/workflows/: build.yml
AnkiPomodoroTimerBreatheExericise/: __init__.py  breathing.py  config.py  constants.py  hooks.py  pomodoro.py  state.py  timer_utils.py  translator.py
AnkiPomodoroTimerBreatheExericise/config/: config.example.json  config.py  type.py
AnkiPomodoroTimerBreatheExericise/locales/: messages.pot
AnkiPomodoroTimerBreatheExericise/ui/: circular_timer.py  config_components.py  config_dialog.py  statusbar.py
AnkiPomodoroTimerBreathingExercise/: __init__.py  audioplayer.py  breathing.py  config.json.bak  constants.py  hooks.py  pomodoro.py  state.py  translator.py
AnkiPomodoroTimerBreathingExercise/config/: __init__.py  config.py  constants.py  enums.py  languages.py  types.py
AnkiPomodoroTimerBreathingExericise/: audioplayer.py  breathing.py  constants.py  hooks.py  pomodoro.py  state.py  translator.py
src/: __init__.py  audioplayer.py  babel.cfg  breathing.py  hooks.py  state.py  translator.py
src/config/: __init__.py  config.py  (+5 more)
ui/: __init__.py  checkin_dialog.py  circular_timer.py  config_dialog.py  countdown_dialog.py  reminder_dialog.py  simple_charts.py  stats_dialog.py  statusbar.py  timer_reminder_dialog.py
(+78 files in other folders)
